syntax = "proto3";

option csharp_namespace = "SpaceBattle.gRPC";

package server;

// The greeting service definition.
service EndPoint{
  // Sends a greeting
  rpc Command(CommandRequest) returns (CommandReply);
}
message CommandForObject{
	string GameItemId = 1;
	string Value = 2;
}

message CommandRequest {
	string GameId = 1;
	string CommandType = 2;
	repeated CommandForObject Args = 3;
}

// The response message containing the greetings.
message CommandReply {
  int32 status = 1;
}
